# stm32l0x1-context-hal

./: .gitignore  Cargo.toml  README.md
src/: adc.rs  common.rs  flash.rs  gpio.rs  lib.rs  power.rs  time.rs
src/i2c/: mod.rs  stm32l011x3_4.rs  stm32l031x4_6.rs
src/rcc/: clocking.rs  mod.rs
src/serial/: mod.rs  stm32l011x3_4.rs  stm32l031x4_6.rs
