[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
name = "hal2"
version = "0.2.0"

[dependencies]
nb = "0.1.1"
stm32l0x1 = "0.13.1"

[features]
default = ["rt"]
rt = ["stm32l0x1/rt"]
STM32L011x4 = []
STM32L011x3 = []
STM32L031x4 = []
STM32L031x6 = []

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.cortex-m]
version = "0.5.4"

[patch.crates-io]
cortex-m = { path = "/Users/bmatt/Development/cake/cortex-m" }
stm32l0x1 = { path = "../stm32l0x1/" }
